--- a/book/spanish/content/ch06-translate.html
+++ b/book/spanish/content/ch06-translate.html
@@ -8,7 +8,7 @@
 <section data-type="sect1">
 <h1>Traslaci&#xF3;n</h1>
 
-<p>Trabajar <a contenteditable="false" data-primary="translating locations" data-type="indexterm" id="tl6">&nbsp;</a>con transformaciones puede ser dif&#xED;cil, pero la funci&#xF3;n&nbsp;<code>translate()</code>&nbsp;<a contenteditable="false" data-primary="translate() function" data-type="indexterm" id="tf6">&nbsp;</a>es la m&#xE1;s sencilla, as&#xED; que empezaremos con esta. Tal como <a data-type="xref" href="#Fig_06_01">Figura 6-1</a> muestra, esta funci&#xF3;n puede trasladar el sistema de coordenadas hacia la izquierda, derecha, arriba y abajo.</p>
+<p>Trabajar<a contenteditable="false" data-primary="translating locations" data-type="indexterm" id="tl6">&nbsp;</a>con transformaciones puede ser dif&#xED;cil, pero la funci&#xF3;n&nbsp;<code>translate()</code>&nbsp;<a contenteditable="false" data-primary="translate() function" data-type="indexterm" id="tf6">&nbsp;</a>es la m&#xE1;s sencilla, as&#xED; que empezaremos con esta. Tal como la <a data-type="xref" href="#Fig_06_01">Figura 6-1</a> muestra, esta funci&#xF3;n puede trasladar el sistema de coordenadas hacia la izquierda, derecha, arriba y abajo.</p>
 
 <figure id="Fig_06_01"><img alt="Fig 06 01" src="images/gspj_0601.png" />
 <figcaption><b>Figura 6-1. </b>Trasladando las coordenadas</figcaption>
@@ -168,7 +168,7 @@ function draw() {
 }</pre>
 
 <div data-type="note">
-<p>Tambi&#xE9;n puedes usar las funciones <code>rectMode()</code>, <code>ellipseMode()</code> y <code>imageMode()</code> para hacer m&#xE1;s simple el dibujo de figuras desde su centro.&nbsp;Puedes leer sobre estas funciones &nbsp;en la <em>Referencia de p5.js</em>.</p>
+<p>Tambi&#xE9;n puedes usar las funciones <code>rectMode()</code>, <code>ellipseMode()</code> y <code>imageMode()</code> para hacer m&#xE1;s simple el dibujo de figuras desde su centro.&nbsp;Puedes leer sobre estas funciones en la <em>Referencia de p5.js</em>.</p>
 </div>
 </section>
 
@@ -309,7 +309,7 @@ function draw() {
 <figcaption/>
 </figure>
 
-<p>Las funciones <code>translate()</code>, <code>rotate()</code>, y <code>scale()</code> <a contenteditable="false" data-primary="robot programs (examples)" data-secondary="translate, rotate, and scale in" data-type="indexterm" id="rp6trs">&nbsp;</a>son utilizadas para modificar el bosquejo del robot. En relaci&#xF3;n a <a data-type="xref" href="#robot3">Robot 3: respuesta</a>, <code>translate()</code> es usado para hacer el c&#xF3;digo m&#xE1;s f&#xE1;cil de leer. Aqu&#xED;, observa c&#xF3;mo ya no es necesario sumar el valor de <code>x</code> a cada funci&#xF3;n de dibujo porque la funci&#xF3;n <code>translate()</code> mueve todo. Similarmente, la funci&#xF3;n <code>scale()</code> es usada para definir las dimensiones del robot completo. Cuando el rat&#xF3;n no est&#xE1; presionado, el tama&#xF1;o es de un 60% y cuando s&#xED; est&#xE1; presionado, es de un 100% en relaci&#xF3;n a las coordenadas originales. La funci&#xF3;n <code>rotate()</code> es usada dentro del bucle para dibujar una l&#xED;nea, rotarla un poco, luego dibujar una segunda l&#xED;nea, luego rotarla un poco m&#xE1;s, y as&#xED; hasta que el bucle ha dibujado 30 l&#xED;neas en forma de c&#xED;rculo para darle estilo al pelo de la cabeza del robot:</p>
+<p>Las funciones <code>translate()</code>, <code>rotate()</code>, y <code>scale()</code> <a contenteditable="false" data-primary="robot programs (examples)" data-secondary="translate, rotate, and scale in" data-type="indexterm" id="rp6trs">&nbsp;</a>son utilizadas para modificar el bosquejo del robot. En relaci&#xF3;n a <a data-type="xref" href="#robot3">Robot 3: respuesta</a>, <code>translate()</code> es usado para hacer el c&#xF3;digo m&#xE1;s f&#xE1;cil de leer. Aqu&#xED;, observa como ya no es necesario sumar el valor de <code>x</code> a cada funci&#xF3;n de dibujo porque la funci&#xF3;n <code>translate()</code> mueve todo. Similarmente, la funci&#xF3;n <code>scale()</code> es usada para definir las dimensiones del robot completo. Cuando el rat&#xF3;n no est&#xE1; presionado, el tama&#xF1;o es de un 60% y cuando s&#xED; est&#xE1; presionado, es de un 100% en relaci&#xF3;n a las coordenadas originales. La funci&#xF3;n <code>rotate()</code> es usada dentro del bucle para dibujar una l&#xED;nea, rotarla un poco, luego dibujar una segunda l&#xED;nea, luego rotarla un poco m&#xE1;s, y as&#xED; hasta que el bucle ha dibujado 30 l&#xED;neas en forma de c&#xED;rculo para darle estilo al pelo de la cabeza del robot:</p>
 
 <pre data-code-language="p5js" data-type="programlisting">
 var x = 60;          // Coordenada x
